# SecGDB

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  client.cpp  main.cc  main.cpp  prebuild.sh  proxy.cpp  server.cpp
benchmark/: ana_fake_data.py  benchmark.sh  benchmark_cache.sh  benchmark_gendata.sh  show_fake_data.py
include/: client.hpp  compare.h  crypto_stuff.hpp  data_structures.hpp  dictionary_items.hpp  exceptions.hpp  ggm.h  global.h  graph.hpp  interactor.hpp  io.hpp  mpc.hpp  network.hpp  proxy.hpp  sec_compare.hpp  server.hpp
oc/: CMakeLists.txt  compare.oc
scripts/: benchmark_comm.sh  benchmark_dist.sh  benchmark_fake.sh  benchmark_update.sh  download_dataset.py  show_fake_data.py  test_enc.sh
test/: CMakeLists.txt  test_dijestra.cpp  test_dinic.cpp  test_ggm.c
test/oblivc-long/: compare.c  main.cpp
test/oblivc_alive/: Makefile  compare.oc  main.cc
test/oblivc_compare/: Makefile  compare.h  compare.oc  data_struct.h  main.cpp
util/: compare.oc  crypto_stuff.cpp  ggm.c  graph.cpp  sec_compare.cpp
utils/: CMakeLists.txt  Makefile  crypto_stuff.cpp  ggm.c  graph.cpp  interactor.cpp  io.cpp  mpc.cpp  network.cpp
